--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^15.1.0",
     "react-native-tab-view": "^3.5.2",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
