--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-redux": "^9.1.0",
     "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3"
+    "@expo/metro-runtime": "~3.1.3",
+    "react-native-maps": "1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
